--- a/jpovlin.ipynb
+++ b/jpovlin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -18,7 +18,7 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "dbname = \"fdac18mp2\" #please use this database\n",
-    "collname = \"glprj_jdunca51\" #please modify so you store data in your collection\n",
+    "collname = \"glprj_jpovlin\" #please modify so you store data in your collection\n",
     "my_char = 'f'\n",
     "\n",
     "# beginning page index\n",
